--- a/themes/cactus/layout/_partial/post/date.ejs
+++ b/themes/cactus/layout/_partial/post/date.ejs
@@ -2,7 +2,7 @@
     <div class="<%= class_name %>">
       <% if (is_post()) { %>
         <time datetime="<%= date_xml(post.date) %>" itemprop="datePublished"><%= date(post.date, config.date_format) %></time>
-        <% if (theme.post.show_updated && post.date !== post.updated) { %>
+        <% if (theme.post.show_updated && date(post.date, config.date_format) !== date(post.updated, config.date_format)) { %>
         (Updated: <time datetime="<%= date_xml(post.updated) %>" itemprop="dateModified"><%= date(post.updated, config.date_format) %></time>)
         <% } %>
       <% } else { %>
